# juji-python-sdk

./: .env  .gitignore  README.md  chat_example.py  design_example.py  main.py  pyproject.toml
juji_python_sdk/: __init__.py  chatbot.py  design.py
